# JohnPorkFighterHero

./: .gitignore  CMakeLists.txt  CMakePresets.json  JohnPorkFighterHero.sln  JohnPorkFighterHero.vcxproj  JohnPorkFighterHero.vcxproj.filters  README.md  assetManager.cpp  assetManager.h  button.cpp  button.h  enemy.cpp  enemy.h  generateReleaseArchive.py  main.cpp  player.cpp  player.h
include/: AssetManager.h  Button.h  Common.h  GameState.h  MainMenu.h  MissionMenu.h  MissionSelection.h  SettingsMenu.h  StackManager.h  UIElement.h
include/Missions/: MissionManager.h
include/UI/: Button.h  MissionCard.h
include/Window/: BaseWindow.h
src/: AssetManager.cpp  Button.cpp  Common.cpp  MainMenu.cpp  SettingsMenu.cpp  main.cpp
src/Missions/: MissionManager.cpp  MissionMenu.cpp
src/UI/: Button.cpp  MissionCard.cpp
